Example loader update.
Updaste to the W3Schools HowTo Examples.

--- a/HTML, CSS & JavaScript/Native Code Examples/W3Schools HowTo Examples/examples/menus/menu-icons.html
+++ b/HTML, CSS & JavaScript/Native Code Examples/W3Schools HowTo Examples/examples/menus/menu-icons.html
@@ -1,23 +1,6 @@
 <!-- menu-icons.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-		div {
-		    width: 35px;
-		    height: 5px;
-		    background-color: black;
-		    margin: 6px 0;
-		}
-	</style>
-</head>
-<body>
-	<p>A menu icon:</p>
-
-	<div></div>
-	<div></div>
-	<div></div>
-</body>
-</html>
+<p>A menu icon:</p>
+	
+<div class="menu-icon-bar"></div>
+<div class="menu-icon-bar"></div>
+<div class="menu-icon-bar"></div>
